@@ -13,18 +13,13 @@ sub setup {
    $c->ran_setup('1');
 }
 
-sub  prepare {
-
+sub prepare {
     my $class = shift;
 
-# Note: This use of NEXT is deliberately left here (without a use NEXT)
-#       to ensure back compat, as NEXT always used to be loaded, but 
-#       is now replaced by Class::C3::Adopt::NEXT.
-    my $c = $class->NEXT::prepare(@_);
+    my $c = $class->next::method(@_);
     $c->response->header( 'X-Catalyst-Plugin-Setup' => $c->ran_setup );
 
     return $c;
-
 }
 
 # Note: This is horrible, but Catalyst::Plugin::Server forces the body to
